--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">    
-    <title>MAIN PAGE</title>
-</head>
-<body>
-    <div class="container">
-        <h1>Welcome to my Personal Website!</h1>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Home</title>
+  </head>
+  <body>
+    <nav>
+      <div class="heading">
+        <h4>Navigation Bar</h4>
+      </div>
+      <ul class="nav-links">
+        <li><a class="active" href="index.html">Home</a></li>
+      </ul>
+    </nav>
+    <div class="body-text"><h1>This is Home Page!</h1></div>
+  </body>
 </html>
+
+
